k8s/backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpbin
  namespace: wasmup
  labels:
    app: httpbin
    service: httpbin
spec:
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  selector:
    app: httpbin
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpbin
  namespace: wasmup
spec:
  replicas: 1
  selector:
    matchLabels:
      app: httpbin
      version: v1
  template:
    metadata:
      labels:
        app: httpbin
        version: v1
    spec:
      serviceAccountName: httpbin
      containers:
      - name: httpbin
        image: mccutchen/go-httpbin:v2.13.4
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
